# MCPAgentSDK

./: .gitignore  README.md  README_zh.md  example.py  pyproject.toml
.codebuddy/: mcp.json  settings.json
.codebuddy/skills/openspec-integrated-superpowers/: SKILL.md
.codebuddy/skills/openspec-integrated-superpowers/phases/: phase1-propose.md  phase3-execution.md
.codebuddy/skills/openspec-integrated-superpowers/templates/: tasks-template.md
docs/superpowers/plans/: 2026-04-03-hook-support.md
docs/superpowers/specs/: 2026-04-03-hook-support-design.md
mcp_agent_sdk/: __init__.py  errors.py  hooks.py  mcp_server.py  message_parser.py  process.py  prompt_template.py  sdk.py  types.py
openspec/changes/add-can-use-tool-callback/: design.md  proposal.md  tasks.md
openspec/changes/add-can-use-tool-callback/specs/: can-use-tool.md
openspec/changes/error-handling-and-message-types/: design.md  proposal.md  tasks.md
openspec/changes/error-handling-and-message-types/specs/: error-handling-and-message-types.md
openspec/changes/mcp-agent-sdk/: design.md  proposal.md  tasks.md
openspec/changes/mcp-agent-sdk/specs/: mcp-agent-sdk.md
tests/: test_can_use_tool_handling.py  test_can_use_tool_types.py  test_e2e.py  test_errors.py  test_hooks.py  test_mcp_server.py  test_message_parser.py  test_message_parser_v2.py  test_process.py  test_sdk.py  test_sdk_errors.py  test_sdk_hooks.py  test_sdk_messages.py  test_stderr_reader.py  test_types.py
