[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-sdk"
version = "0.1.0"
description = "Agent SDK with MCP-based auto-validation and human-in-the-loop control"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
include = ["mcp_agent_sdk*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
]
